fixed some padding on mobile

--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -51,7 +51,6 @@ $mobile-break: 768px;
   @media screen and (max-width: $mobile-break) {
     .navbar {
       padding: 20px 40px;
-      width: 100%;
     }
   }
 
