--- a/src/styles/scss/Image.scss
+++ b/src/styles/scss/Image.scss
@@ -4,7 +4,7 @@ $width: 90vw;
 
 .image {
   @media screen and (max-width: $mobile-break) {
-    margin-bottom: 20px;
+    margin-bottom: 17px;
 
     &:last-child {
       margin-bottom: 0;
